+ delete api exposed to players adding extra authorization
